--- a/templates/signup.html
+++ b/templates/signup.html
@@ -12,7 +12,7 @@
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
 
-    <title>login</title>
+    <title>sign up</title>
     <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap" rel="stylesheet">
 
 </head>
@@ -29,8 +29,12 @@
         text-align: center;
     }
 
+    /* #PleaseSignUp {
+        font-size: 150%;
+    } */
+
     .backlogin {
-        margin-top: 5%;
+        margin-top: 11px;
     }
 
     .form-floating1 {
@@ -41,25 +45,63 @@
     .form-floating2 {
         color: black;
     }
+
+    #homeimage{
+        width: 35%;
+        margin-top: 8%;
+        margin-bottom: 2%;
+    }
+
+    #homeimage{
+        transition: all 0.2s linear;
+    }
+    #homeimage:hover{
+        transform: scale(1.1);
+    }
+
+    a:link {
+    color : rgb(255, 255, 255);
+    text-decoration: none;
+    }
+    a:visited {
+        color : rgb(255, 255, 255);
+        text-decoration: none;
+    }
+    a:hover {
+        color : rgb(255, 170, 0);
+        /* text-decoration: underline; */
+    }
+    a:active {
+        color : rgb(107, 118, 240);
+        text-decoration: none;
+    }
+
+    #confirms {
+        margin: 0px;
+    }
+
+    /* #HOTSIX {
+        margin: 0;
+    } */
 </style>
 
 <body>
-    <a href="{{url_for('home')}}">home</a>
+    <a href="{{ url_for('home')}}"><img id="homeimage" src="static\image\free-icon-fire-1211048.png"></a>
 
     <form id="signupForm" method="POST" action="{{url_for('signup')}}">
-    <h1>Please Sign Up</h1>
+    <h1 id="PleaseSignUp">Please Sign Up</h1>
     <div class="form-floating1">
-        <input type="id" class="form-control" id="signupid" name="signup_input_id" placeholder="Make ID" maxlength="20" value="{{input_id}}">
+        <input type="id" class="form-control" id="signupid" name="signup_input_id" placeholder="* Make ID" maxlength="20" value="{{input_id}}">
         <label for="floatingInput"></label>
-        <input type="id" class="form-control" id="signupname" name="signup_input_name" placeholder="Your name" maxlength="20" value="{{input_name}}">
+        <input type="id" class="form-control" id="signupname" name="signup_input_name" placeholder="* Your name" maxlength="20" value="{{input_name}}">
         <label for="floatingInput"></label>
     </div>
     
     <div class="form-floating2">
-        <input type="password" class="form-control" id="signuppw" name="signup_input_pw" placeholder="Make Password" maxlength="20">
+        <input type="password" class="form-control" id="signuppw" name="signup_input_pw" placeholder="* Make Password" maxlength="20">
         <label for="floatingPassword"></label>
-        <!-- <input type="password" class="form-control" id="floatingPassword" name="signup_confirm_pw" placeholder="Confirm Password">
-        <label for="floatingPassword"></label> -->
+        <input type="password" class="form-control" id="floatingPassword" name="signup_confirm_pw" placeholder="* Confirm Password" maxlength="20">
+        <label for="floatingPassword"></label>
     </div>
     
     <button class="w-100 btn btn-lg btn-primary" type="submit">회원가입</button>
@@ -68,9 +110,16 @@
     <a href="{{ url_for('login') }}">
         <p class="backlogin">Back Login</p>
     </a>
-    <p class="mt-5 mb-3 text-muted">&copy;HOTSIX</p>
+    <p id="confirms">{{confirm_id_name_pw}}
+        {{confirm_id_msg}}
+        {{confirm_name_msg}}
+        {{confirm_pw_msg}}
+        {{already_name_msg}}
+        {{already_id_msg}}
+        {{confirm_pw_c_msg}}
+    </p>
+    <p class="mt-5 mb-3 text-muted" id="HOTSIX">&copy;HOTSIX</p>
     
-    <p>{{confirm_id_name_pw}}{{confirm_id_msg}}{{confirm_name_msg}}{{confirm_pw_msg}}{{already_name_msg}}{{already_id_msg}}</p>
 
 </body>
 
