--- a/static/styles/login.css
+++ b/static/styles/login.css
@@ -10,7 +10,7 @@ main {
 }
 
 .signup {
-    margin-top: 5%;
+    margin-top: 11px;
 }
 
 .form-floating1 {
@@ -20,4 +20,41 @@ main {
 
 .form-floating2 {
     color: black;
+}
+
+#homeimage {
+    width: 40%;
+    margin-bottom: 2%;
+}
+
+#homeimage {
+    transition: all 0.2s linear;
+}
+
+#homeimage:hover {
+    transform: scale(1.1);
+}
+
+a:link {
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+}
+
+a:visited {
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+}
+
+a:hover {
+    color: rgb(255, 170, 0);
+    /* text-decoration: underline; */
+}
+
+a:active {
+    color: rgb(107, 118, 240);
+    text-decoration: none;
+}
+
+#login_confirm {
+    margin: 0px;
 }
